--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
+<!DOCTYPE html>
+
+<html>
+<head>
+  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+  <link rel="stylesheet" href="styles/style.css"/>
+  <title>Hello, World!</title>
+</head>
 <body>
-  <h1>КИРИЛЛ СОСАЛ !!!</h1>
-  <p>просьба распространить информацию</p>
+  <h1>
+    ул. Арнасай7; п.1
+  </h1>
+  <img src="3.png" width="200" height="500">
 </body>
+</html>
